styles/index.css
/* ... */
table > thead, table > tfoot { background: inherit }
table > thead {
  z-index: 0;
  display: block;
  position: relative;
  background: inherit;
}
table > thead::before, table > thead::after {
  display: block;
  background: inherit;
}
table > tfoot {
  z-index: 0;
  display: block;
  position: relative;
  background: inherit;
}
table > tfoot::before, table > tfoot::after {
  display: block;
  background: inherit;
}
table > tbody {
  z-index: 1;
  display: block;
  position: relative;
  background: inherit;
}
table > tbody::before, table > tbody::after {
  display: block;
  background: inherit;
  border: solid currentColor;
  border-width: 0.1618em 0;
}
tbody tr { counter-increment: rows }
tbody tr:nth-child(even) { background: inherit }
tbody tr::before {
  opacity: 0.3;
  content: counter(rows) '.';
}
tbody tr::after { content: '\2800' }
tbody tr:hover  { outline: 0.2ch solid currentColor }
tbody tr:hover::before { opacity: 1.0 }
tbody tr:hover::after  { content: '◀' }

tbody tr:hover td:not(:hover) { opacity: 50% }


/* CSS3 Lists
  https://drafts.csswg.org/css-lists-3
  https://perishablepress.com/sexy-html-list-tricks
  Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists

  ::marker
  - https://drafts.csswg.org/css-pseudo/#marker-pseudo
  - https://drafts.csswg.org/css-lists-3/#marker-properties
  - https://css-tricks.com/everything-you-need-to-know-about-the-gap-after-the-list-marker
*/
::marker {
  color: inherit;
  font-size: inherit;
}
:is( ol ) { list-style-position: inside }
:is( ol )[type='1'] { list-style-type: decimal-leading-zero }
:is( ol )::before {}
:is( ol, ul, menu )[data-icon] { list-style-image: unset }
li { clear: both }
li li {}
li::marker {}
li::before, li::after { width: auto }
li::before {}
li::after  { display: none }
li:hover {
  z-index: 1;
  background: inherit;
}
:where( ol, ul ) > li {}
ol > li {}
ul > li {}
ol > li::before,
ul > li::before {}
ol > li::before {}
ul > li::before {}
ol > li::after,
ul > li::after {}
ol > li::after {}
ul > li::after {}

:is(dl, ol, ul, menu ):where( [aria-label], [data-icon] )::before {
  width: 100%;
  display: list-item;
  list-style-position: inside;
  border-bottom: 0.1ch solid;
}
dl[aria-label]::before { text-transform: unset }
li[data-icon]::before {
  float: left;
  display: list-item;
  list-style-position: inside;
}
:is( ol, ul, menu ):is( [role=none], [role=presentation] ) :is( ol, ul, menu ) {
  margin: 0;
  list-style: inherit;
  max-width: initial;
}
[role=presentation] li { border-width: 0 }
[role=presentation] li::before {}
[role=feed] {
  max-height: 25em;
  overflow-x: auto;
  border: 0.1ch solid;
  counter-reset: header;
}
[role=feed] article { border: inherit }
[role=feed]:hover article { opacity: .5 }
[role=feed]:hover article:hover { opacity: 1 }

[aria-orientation=horizontal],
[aria-orientation=horizontal] :is( ol, ul, menu ) {
  /* width: inherit; */
  list-style-position: inside;
}
[aria-orientation=horizontal] { justify-content: space-around }
[role=marquee], [role=log], [role=toolbar]. [role=menubar] {
  justify-content: flex-start;
  list-style-position: inside;
}
[role=marquee], [role=log] {}
:is( [role=marquee], [role=log] ):hover li { opacity: 0.5 }
:is( [role=marquee], [role=log] ) li:hover { opacity: 1 }
[role=marquee][aria-orientation=horizontal] {
  overflow-x: auto;
  flex-wrap: nowrap;
  font-size: larger;
  margin-left: auto;
  width: calc(100% - 1ch);
  list-style-position: inside;
  padding-right: calc(100% - 1ch);
}
[role=log] { justify-content: flex-start }
[role=log] li {
  cursor: text;
  border-bottom: 0.1ch solid Canvas;
}
[role=log] li::before,
[role=log] li::after {}
[role=log] li::before { cursor: e-resize }
[role=log] li::after {
  min-width: 2em;
  cursor: w-resize;
  display: inline-block;
}
[aria-orientation=horizontal], [role=toolbar], [role=menubar] {
  flex-wrap: wrap;
  flex-direction: var(--flex-direction);
}
[role=tree] {
  display: block;
  width: max-content;
  background: red;
}
[role=toolbar] {display: inline-flex;justify-content: flex-start;}
[aria-orientation=horizontal], [role=menubar] { display: flex }
:is( [aria-orientation=horizontal], [role=toolbar], [role=menubar] )
  li { min-width: unset; margin: 0; }
menu, [role=menu], [role=toolbar] {
  width: auto;
  list-style: none;
}
:is( menu, [role=menu] ) > li > * {
  margin: unset;
  max-width: unset;
}
[role=toolbar]::before {
  width: 100%;
  display: list-item;
  background: Canvas;
  list-style-position: inside;
}
dl, ol, ul { background: rgba(255,255,255,0.5) }
dd > :is( dl, ol, ul ) {
  max-width: unset;
  background: inherit;
}
details :is( details, dl, ol, ul ) {}

nav > dl::before, nav > ol::before, nav > ul::before ,
nav > dl::after, nav > ol::after, nav > ul::after  {
  margin: 1ch;
  content: '+';
  display: block;
  text-indent: 1ch;
  background: inherit;
}
aside dl, aside dl > *,
aside ol, aside ol > *,
aside ul, aside ul > *,
footer dl, footer dl > *,
footer ol, footer ol > *,
footer ul, footer ul > *
  { background: inherit }
dl {
  background: unset;
  counter-reset: term 0
}
ul { width: calc(100% - 2em - 1ch) }
ul[role=none] { width: calc(100% - 1ch) }
ol {}
ol[type=i] { unicode-bidi: embed }
dd, dt, li {
  -webkit-user-select: all;
          user-select: all;
}
dd {
  background: inherit;
  border-radius: inherit;
}
dd[role=definition]
  { counter-increment: definition }
dt[role=term]::before,
dd[role=definition]::before {}
dd[role=definition] > :is( dl, ol, ul )
  { list-style-position: inside }
dt
  { counter-reset: definition 0 }
dt[role=term] {
  counter-increment: term;
  border-bottom: 0.1ch solid;
}
/* ... */

